--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,12 +11,12 @@ services:
       - config.yaml
     command: /app/replicant -config /config.yaml
   cdp:
-    image: docker.io/chromedp/headless-shell:78.0.3904.108
+    image: docker.io/chromedp/headless-shell:stable
     deploy:
       mode: replicated
       replicas: 2
       endpoint_mode: dnsrr
-    command: --headless --no-sandbox --disable-gpu --disable-software-rasterizer --disable-dev-shm-usage
+    command:  --headless --disable-gpu --disable-software-rasterizer --disable-dev-shm-usage --disable-background-networking --no-sandbox --no-zygote --disable-site-isolation-trials --remote-debugging-address=0.0.0.0 --remote-debugging-port=9222
 volumes:
   data: null
 configs:
