fix: gitlab-ci only_on
Part of #1

--- a/.gitlab-ci.yaml
+++ b/.gitlab-ci.yaml
@@ -23,7 +23,7 @@ test:
   stage: test
   image: $BUILD_IMAGE
   only:
-    - merge_requests
+    - external_pull_requests
     - master
   script:
     - make test
