--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ build_and_push_provisioner:
     - git pull origin master --tags --force
     - export GIT_TAG=`git tag --sort=-version:refname | egrep -m 1 "v[0-9]+\.[0-9]+\.[0-9]+"`
   script:
-    - docker build -f docker/replicant/Dockerfile . -t $REPLICANT_REGISTRY_URL:latest -t $REPLICANT_REGISTRY_URL:$CI_COMMIT_SHA -t $REPLICANT_REGISTRY_URL:$GIT_TAG
+    - docker build -f Dockerfile . -t $REPLICANT_REGISTRY_URL:latest -t $REPLICANT_REGISTRY_URL:$CI_COMMIT_SHA -t $REPLICANT_REGISTRY_URL:$GIT_TAG
     - docker push $REPLICANT_REGISTRY_URL:latest
     - docker push $REPLICANT_REGISTRY_URL:$CI_COMMIT_SHA
     - docker push $REPLICANT_REGISTRY_URL:$GIT_TAG
