--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ build_and_push_pr:
     - apk update
     - apk add py2-pip git
     - pip install awscli
-    - $REGISTRY_LOGIN  &>/dev/null
+    - eval $($REGISTRY_LOGIN)  &>/dev/null
   script:
     - docker build -f Dockerfile . -t $REPLICANT_REGISTRY_URL:$CI_COMMIT_SHA
     - docker push $REPLICANT_REGISTRY_URL:$CI_COMMIT_SHA
@@ -46,7 +46,7 @@ push_tag_registry:
     - apk update
     - apk add py2-pip git
     - pip install awscli
-    - $REGISTRY_LOGIN &>/dev/null 
+    - eval $($REGISTRY_LOGIN) &>/dev/null 
     - git pull origin master --tags --force
     - export GIT_TAG=`git tag --sort=-version:refname | egrep -m 1 "v[0-9]+\.[0-9]+\.[0-9]+"`
   script:
